[gd_scene load_steps=7 format=3 uid="uid://6tfpmb58pofv"]

[ext_resource type="Script" path="res://scripts/hex_edit.gd" id="1_4ivut"]
[ext_resource type="PackedScene" uid="uid://lrirg2rvgvgy" path="res://scenes/hexagon.tscn" id="2_xwf1l"]
[ext_resource type="Animation" uid="uid://bqw8mnaxrv0k8" path="res://animations/hex_edit.res" id="3_rgarb"]
[ext_resource type="Theme" uid="uid://ffkwu82iptgy" path="res://themes/default_theme.tres" id="4_c5nq1"]

[sub_resource type="Animation" id="Animation_ylfll"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HexagonScale:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HexagonScale:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vt6lq"]
_data = {
"RESET": SubResource("Animation_ylfll"),
"hex_edit": ExtResource("3_rgarb")
}

[node name="HexEdit" type="StaticBody2D" node_paths=PackedStringArray("_hexagon", "_collider", "_anim", "_edit_parent", "_start_hex_checkbox", "_hex_text_edit", "_hex_color_edit")]
input_pickable = true
script = ExtResource("1_4ivut")
_hexagon = NodePath("HexagonScale/Hexagon")
_collider = NodePath("CollisionPolygon2D")
_anim = NodePath("AnimationPlayer")
_edit_parent = NodePath("UI/EditParent")
_start_hex_checkbox = NodePath("UI/EditParent/StartHexCheckBox")
_hex_text_edit = NodePath("UI/EditParent/LabelEditBox/VBoxContainer/HexTextEdit")
_hex_color_edit = NodePath("UI/EditParent/ColorEditBox/ColorLineEdit")

[node name="HexagonScale" type="Node2D" parent="."]

[node name="Hexagon" parent="HexagonScale" instance=ExtResource("2_xwf1l")]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
scale = Vector2(90, 90)
polygon = PackedVector2Array(-1, 0, -0.5, -0.866, 0.5, -0.866, 1, 0, 0.5, 0.866, -0.5, 0.866)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vt6lq")
}

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_c5nq1")

[node name="EditParent" type="VBoxContainer" parent="UI"]
layout_mode = 0
offset_left = -170.0
offset_top = -140.0
offset_right = 170.0
offset_bottom = 141.0
alignment = 1

[node name="StartHexCheckBox" type="CheckBox" parent="UI/EditParent"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
size_flags_stretch_ratio = 0.15
theme_type_variation = &"HexCheckBox"
text = "Start hex"
alignment = 1

[node name="LabelEditBox" type="MarginContainer" parent="UI/EditParent"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.21
theme_override_constants/margin_top = 0
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/EditParent/LabelEditBox"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/EditParent/LabelEditBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"HexHeader"
text = "Hex Label"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[node name="HexTextEdit" type="TextEdit" parent="UI/EditParent/LabelEditBox/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"HexLineEdit"
text = "The quick brown fox jumps over the lazy dog the quick brown fox "
wrap_mode = 1
caret_blink = true
caret_multiple = false
metadata/_edit_lock_ = true

[node name="ColorEditBox" type="HBoxContainer" parent="UI/EditParent"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.14
theme_override_constants/separation = 25
alignment = 1

[node name="Label" type="Label" parent="UI/EditParent/ColorEditBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HexHeader"
text = "Hex Color"
metadata/_edit_lock_ = true

[node name="ColorLineEdit" type="LineEdit" parent="UI/EditParent/ColorEditBox"]
visible = false
layout_mode = 2
theme_type_variation = &"HexLineEdit"
placeholder_text = "Color"
metadata/_edit_lock_ = true

[node name="ColorPickerButton" type="ColorPickerButton" parent="UI/EditParent/ColorEditBox"]
custom_minimum_size = Vector2(60, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 5.32
edit_alpha = false

[node name="Buttons" type="HBoxContainer" parent="UI/EditParent"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 44
alignment = 1

[node name="CancelButton" type="Button" parent="UI/EditParent/Buttons"]
custom_minimum_size = Vector2(44, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HexButton"
theme_override_colors/font_color = Color(0.65, 0.279933, 0.2535, 1)
text = "✖"

[node name="OKButton" type="Button" parent="UI/EditParent/Buttons"]
custom_minimum_size = Vector2(44, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HexButton"
theme_override_colors/font_color = Color(0.25166, 0.651848, 0.551229, 1)
text = "✔"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="toggled" from="UI/EditParent/StartHexCheckBox" to="." method="_on_start_hex_check_box_toggled"]
[connection signal="gui_input" from="UI/EditParent/LabelEditBox/VBoxContainer/HexTextEdit" to="." method="_on_hex_text_edit_gui_input"]
[connection signal="gui_input" from="UI/EditParent/ColorEditBox/ColorLineEdit" to="." method="_on_color_line_edit_gui_input"]
[connection signal="color_changed" from="UI/EditParent/ColorEditBox/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="pressed" from="UI/EditParent/Buttons/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="UI/EditParent/Buttons/OKButton" to="." method="_on_ok_button_pressed"]
